@@ -4,6 +4,10 @@
  *
  **********************************************************************/
 
+/*KXobject Base nil
+   [Singletons]
+*/
+
 
 #include "kxnil.h"
 
